# XFPM

./: .gitignore  CMakeLists.txt  README.md  fp.hpp  helpers.hpp  main.cpp  test_vec_elemult_direct.cpp
backends/reference/: activation.hpp  antilogarithm.hpp  backend.hpp  divide.hpp  hyperbolic.hpp  logarithm.hpp  multiply.hpp  power.hpp  rsqrt.hpp  sqrt.hpp  trigonometric.hpp  vector_elemwise.hpp  vector_minmax.hpp  vector_ops.hpp  vector_scale.hpp  vector_stats.hpp
backends/xtensa/: activation.hpp  antilogarithm.hpp  backend.hpp  divide.hpp  hyperbolic.hpp  logarithm.hpp  multiply.hpp  power.hpp  rsqrt.hpp  sqrt.hpp  trigonometric.hpp  vector_elemwise.hpp  vector_helpers.hpp  vector_minmax.hpp  vector_ops.hpp  vector_scale.hpp  vector_stats.hpp
cmake/: xtensa-toolchain.cmake
examples/: README.md  README_INTERMEDIATE_PRECISION.md  basic_tutorial.cpp  intermediate_precision_example.cpp  vectorized_operations.cpp
examples/afc/: observer.hpp
examples/afc/float/: CMakeLists.txt  main.cpp  nlms_node.cpp  nlms_node.h
examples/porting/: README.md  dot_product_comparison.cpp  fixedpoint_refactoring_example.md  process_sample_refactored.cpp
libs/ndsp/testdriver/: main.c
libs/ndsp/testdriver/env/: addr2name.c  float16.c  fpstat.c  malloc16.c  mips.c  package.cpp  profiler.c  rms.c  testcase.c  testeng.c  testeng_errh.c  testeng_load_fxn.c  testeng_process_fxn.c  utils.c  vectools.c  vreport.c
libs/ndsp/testdriver/include/: NatureDSP_Math.h  NatureDSP_baseopGCC.h  NatureDSP_baseopMSVC.h  NatureDSP_baseopXtensa.h  addr2name.h  config.h  float16.h  fpstat.h  malloc16.h  mips.h  package.h  packages.h  profiler.h  rms.h  testcase.h  testeng.h  types.h  utils.h  vectools.h  vreport.h
libs/ndsp/testdriver/vectors_sanity/cfft1/: fft1024_cplx16x16s2.seq  fft1024_cplx16x16s3.seq  fft1024_cplx24x24s0.seq  fft1024_cplx24x24s1.seq  fft1024_cplx24x24s2.seq  fft1024_cplx24x24s3.seq  fft1024_cplx32x16s2.seq  fft1024_cplx32x16s3.seq  fft1024_cplx32x32s2.seq  fft1024_cplx32x32s3.seq  fft128_cplx16x16s2.seq  fft128_cplx16x16s3.seq  fft128_cplx24x24s0.seq  fft128_cplx24x24s1.seq  fft128_cplx24x24s2.seq  fft128_cplx24x24s3.seq  fft128_cplx32x16s2.seq  fft128_cplx32x16s3.seq  fft128_cplx32x32s2.seq  fft128_cplx32x32s3.seq  fft16_cplx16x16s2.seq  fft16_cplx16x16s3.seq  fft16_cplx24x24s0.seq  fft16_cplx24x24s1.seq  fft16_cplx24x24s2.seq  fft16_cplx24x24s3.seq  fft16_cplx32x16s2.seq  fft16_cplx32x16s3.seq  fft16_cplx32x32s2.seq  fft16_cplx32x32s3.seq  fft2048_cplx16x16s2.seq  fft2048_cplx16x16s3.seq  fft2048_cplx24x24s0.seq  fft2048_cplx24x24s1.seq  fft2048_cplx24x24s2.seq  fft2048_cplx24x24s3.seq  fft2048_cplx32x16s2.seq  fft2048_cplx32x16s3.seq  fft2048_cplx32x32s2.seq  fft2048_cplx32x32s3.seq  (+140 more)
libs/ndsp/testdriver/vectors_sanity/cfftie1/: fft1024_cplx16x16_ie.seq  fft1024_cplx32x16_ies2.seq  fft1024_cplx32x16_ies3.seq  fft1024_cplx32x32_ies2.seq  fft1024_cplx32x32_ies3.seq  fft128_cplx16x16_ie.seq  fft128_cplx32x32_ies2.seq  fft128_cplx32x32_ies3.seq  fft256_cplx16x16_ie.seq  fft256_cplx32x16_ies2.seq  fft256_cplx32x16_ies3.seq  fft256_cplx32x32_ies2.seq  fft256_cplx32x32_ies3.seq  fft512_cplx16x16_ie.seq  fft512_cplx32x16_ies2.seq  fft512_cplx32x16_ies3.seq  fft512_cplx32x32_ies2.seq  fft512_cplx32x32_ies3.seq  fft_cplx24x24_ie.seq  ifft1024_cplx16x16_ie.seq  ifft1024_cplx32x16_ies2.seq  ifft1024_cplx32x16_ies3.seq  ifft1024_cplx32x32_ies2.seq  ifft1024_cplx32x32_ies3.seq  ifft128_cplx16x16_ie.seq  ifft128_cplx32x32_ies2.seq  ifft128_cplx32x32_ies3.seq  ifft256_cplx16x16_ie.seq  ifft256_cplx32x16_ies2.seq  ifft256_cplx32x16_ies3.seq  ifft256_cplx32x32_ies2.seq  ifft256_cplx32x32_ies3.seq  ifft512_cplx16x16_ie.seq  ifft512_cplx32x16_ies2.seq  ifft512_cplx32x16_ies3.seq  ifft512_cplx32x32_ies2.seq  ifft512_cplx32x32_ies3.seq  ifft_cplx24x24_ie.seq
libs/ndsp/testdriver/vectors_sanity/cfftie2/: fft1024_cplxf_ie.seq  fft128_cplxf_ie.seq  fft16_cplxf_ie.seq  fft2048_cplxf_ie.seq  fft256_cplxf_ie.seq  fft32_cplxf_ie.seq  fft4096_cplxf_ie.seq  fft512_cplxf_ie.seq  fft64_cplxf_ie.seq  fft8_cplxf_ie.seq  ifft1024_cplxf_ie.seq  ifft128_cplxf_ie.seq  ifft16_cplxf_ie.seq  ifft2048_cplxf_ie.seq  ifft256_cplxf_ie.seq  ifft32_cplxf_ie.seq  ifft4096_cplxf_ie.seq  ifft512_cplxf_ie.seq  ifft64_cplxf_ie.seq  ifft8_cplxf_ie.seq
libs/ndsp/testdriver/vectors_sanity/cnfft1/: fft100_cplx32x32s2.seq  fft100_cplx32x32s3.seq  fft108_cplx32x32s2.seq  fft108_cplx32x32s3.seq  fft120_cplx32x32s2.seq  fft120_cplx32x32s3.seq  fft12_cplx32x32s2.seq  fft12_cplx32x32s3.seq  fft144_cplx32x32s2.seq  fft144_cplx32x32s3.seq  fft160_cplx32x32s2.seq  fft160_cplx32x32s3.seq  fft180_cplx32x32s2.seq  fft180_cplx32x32s3.seq  fft192_cplx32x32s2.seq  fft192_cplx32x32s3.seq  fft200_cplx32x32s2.seq  fft200_cplx32x32s3.seq  fft216_cplx32x32s2.seq  fft216_cplx32x32s3.seq  fft240_cplx32x32s2.seq  fft240_cplx32x32s3.seq  fft24_cplx32x32s2.seq  fft24_cplx32x32s3.seq  fft288_cplx32x32s2.seq  fft288_cplx32x32s3.seq  fft300_cplx32x32s2.seq  fft300_cplx32x32s3.seq  fft320_cplx32x32s2.seq  fft320_cplx32x32s3.seq  fft324_cplx32x32s2.seq  fft324_cplx32x32s3.seq  fft360_cplx32x32s2.seq  fft360_cplx32x32s3.seq  fft36_cplx32x32s2.seq  fft36_cplx32x32s3.seq  fft384_cplx32x32s2.seq  fft384_cplx32x32s3.seq  fft400_cplx32x32s2.seq  fft400_cplx32x32s3.seq  (+88 more)
libs/ndsp/testdriver/vectors_sanity/complexs2/: scl_complex2invmag.seq  scl_complex2mag.seq
libs/ndsp/testdriver/vectors_sanity/complexv1/: vec_complex2mag16x16.seq  vec_complex2mag32x32.seq  vec_cplx2cplx_mult16x16.seq  vec_cplx2cplx_mult32x32.seq  vec_cplx2real_mults16x16.seq  vec_cplx2real_mults32x32.seq  vec_cplx2real_multv16x16.seq  vec_cplx2real_multv32x32.seq  vec_cplxconj16x16.seq  vec_cplxconj32x32.seq
libs/ndsp/testdriver/vectors_sanity/complexv2/: vec_complex2invmag.seq  vec_complex2mag.seq  vec_cplx2cplx_multf.seq  vec_cplx2real_multsf.seq  vec_cplx2real_multvf.seq  vec_cplxConjf.seq
tests/: test_antilogarithm.cpp  test_array_ops.cpp  test_common.hpp  test_divide.cpp  test_logarithm.cpp  test_multiply.cpp  test_power.cpp  test_runner.cpp  test_sqrt.cpp  test_vector_ops.cpp
(+1223 files in other folders)
